# mocksql

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude/commands/: commit.md  debug-prompt.md  demo-review.md  deploy.md  eval-mocksql.md  pm-challenge.md  pm-vision.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  release-ui.yml  release.yml
.mocksql/: .gitignore
back/: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  common_vars.py  fetch_secrets.py  pyproject.toml  server.py  start.sh
back/app/api/endpoints/: integration.py  messages.py  models.py  projects.py  query.py  users.py
back/app/exceptions/: exceptions.py
back/app/services/: query_service.py
back/build_query/: accept_validation.py  assertion_corrector.py  assertion_eval.py  assertion_fixer.py  assertion_generator.py  assertion_modifier.py  complexity_scorer.py  constraint_simplifier.py  conv_reasoning_node.py  conversational_agent.py  converstion_history.py  cte_graph.py  data_patcher.py  debug_executor.py  debug_node.py  delete_test_node.py  description_proposal.py  examples_executor.py  examples_generator.py  final_response_node.py  gen_time_estimator.py  inflight_message.py  integration_runner.py  join_recipes.py  lessons.py  other.py  path_slicer.py  pending_instructions.py  profile_checker.py  profiler.py  prompt_tools.py  query_chain.py  query_executor.py  routing.py  scalar_folder.py  schema_fetcher.py  sparse_filler.py  state.py  suggestions_node.py  test_evaluator.py  (+2 more)
back/cli/: assert_cmd.py  assertions.py  checker.py  doc_io.py  generate.py  main.py  manage_cmd.py  parity.py  profile.py  schema_cache.py  test_runner.py
back/dataware/: bigquery_table_manager.py
back/init/: add_column.py  add_table.py  create_user.py  grant_access_to_db.py  init_db.py
back/models/: database.py  db_pool.py  env_variables.py  message_service.py  model_service.py  permissions.py  schemas.py  session_service.py  user_service.py
back/scripts/: run_c1_manual.py
back/sql_functions/: functions.py  helpers.py
back/storage/: config.py  context_loader.py  dbt_manifest.py  test_files.py  test_repository.py
back/tests/: conftest.py  find_literals_and_columns.py  test_agent_context_capping.py  test_alias_final_projections.py  test_api_messages.py  test_api_query.py  test_api_users.py  test_apply_assertions.py  test_assertion_aggregate.py  test_assertion_corrector_serialization.py  test_assertion_empty_vacancy.py  test_assertion_exists.py  test_assertion_fixer_no_vacuous.py  test_assertion_ordering_guidance.py  test_assertion_positive_guard.py  test_assertion_prompt_builds.py  test_assertion_reserved_words.py  test_assertion_retry_breaker.py  test_assertion_scope.py  test_assertion_temporal_guard.py  test_auto_correct_clarification_guard.py  test_autoscope_long_format.py  test_bad_description_desync.py  test_batch_clarification_guard.py  test_cardinality_pin.py  test_checkpoint_incremental.py  test_cli_assertions.py  test_cli_deadborn_marking.py  test_cli_file_identity_backfill.py  test_cli_generate_additive.py  test_cli_manage.py  test_cli_partial_schema_cache.py  test_cli_schema_cache.py  test_cli_schema_gap.py  test_cli_test_source.py  test_cli_update_test.py  test_column_directives_plumbing.py  test_conditions_truncation.py  test_config_language.py  test_config_thinking_budget.py  (+114 more)
back/tests/simplifier/: test_anti_join.py  test_constraint_limit_cases.py  test_constraint_paths.py  test_constraint_simplifier.py  test_derived_predicate_no_remap.py  test_detect_derived_expressions.py  test_extract_constraints.py  test_join_recipes.py  test_lineage_bugs.py  test_partition_pinning.py  test_tautology_filter.py  test_variant_structure_directives.py
back/ui/: pyproject.toml
back/ui/mocksql_ui/: __init__.py  server.py
back/utils/: __init__.py  bigquery_test_helper.py  duckdb_test_helper.py  errors.py  examples.py  faker_fill.py  find_grains.py  insert_examples.py  llm_errors.py  llm_factory.py  logger.py  models.py  msg_types.py  optional_deps.py  postgres_db_utils.py  postgres_test_helper.py  prompt_dump.py  prompt_utils.py  query_services.py  saver.py  schema_utils.py  snowflake_connector.py  sql_code.py  sqlglot_ast.py  test_utils.py  timing.py  trino_connector.py
docs/: agent-fix-loop.md  audit-c6-plan-prompts.md  constraint-simplifier.md  design-v15-spec.md  parity.md  quickstart-dbt.md  quickstart.md  root-cause-spider2snow-resultats-vides.md  spec-export-dbt-unit-tests.md  spec-focused-cte-generation.md  spec-parity.md  spec-profiling-incremental.md  spec-robustesse-generation.md  spec-suggestions-robustesse.md  tickets-convergence.md  vision-produit.md  workflow-query-generation.md
examples/: .gitignore
examples/eval/: collect_gen_timings.py  compare.py  generate_tests.py  judge.py  run_eval.py
examples/jaffle_shop/: mocksql.yml
examples/jaffle_shop/.mocksql/: schema_cache.json
examples/jaffle_shop/.pipetalk/: schema_cache.json
examples/snowflake-live/: import_live.py
examples/snowflake-live/models/: tpch_top_customers.sql
examples/spider/: mocksql.yml
examples/spider/models/: bq001.sql  bq061.sql  bq_bug_col_qualifier.sql  preprocessors.py
examples/spider2-snow/: SNOWFLAKE_COMPAT.md  build_schema_cache.py  mocksql.yml
examples/spider_complexified/: mocksql.yml
examples/spider_complexified/models/: c1.sql  cx001.sql  cx002.sql
examples/trino-c1/: .gitignore  mocksql.yml
examples/trino-c1/models/: c1.sql  cx001.sql
front/: .env.example  Dockerfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/public/: index.html  manifest.json
front/src/: App.css  App.tsx  i18n.ts  index.css  index.tsx  routes.ts
front/src/api/: integration.ts  messages.ts  models.ts  preferences.ts  projects.ts  query.ts  table.ts  users.ts  utils.ts
front/src/app/: store.ts
front/src/hooks/: useLocalStorageState.ts
terraform/: .gitignore  api_enablement.tf  main.tf  variables.tf
(+78 files in other folders)
