[tool.poetry]
name = "mocksql"
version = "0.1.15"
description = "TDD engine for Analytics Engineering — generate unit test data for SQL queries"
authors = ["Adel Skhiri <skhiriadel92@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/skadel/mocksql"
repository = "https://github.com/skadel/mocksql"
keywords = ["sql", "testing", "analytics", "bigquery", "duckdb", "langgraph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
packages = [
  { include = "app" },
  { include = "cli" },
  { include = "build_query" },
  { include = "models" },
  { include = "init" },
  { include = "sql_functions" },
  { include = "utils" },
  { include = "storage" },
]
include = [
  { path = "common_vars.py", format = ["sdist", "wheel"] },
  { path = "server.py", format = ["sdist", "wheel"] },
  { path = "fetch_secrets.py", format = ["sdist", "wheel"] },
  { path = "static/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
typer = {extras = ["all"], version = "^0.26.3"}
uvicorn = "^0.48.0"
langchain = "^1.3.2"
langchain-classic = "1.0.7"
pydantic = ">=2.13.4,<3.0.0"
python-dotenv = "^1.2.2"
duckdb = "^1.5.3"
sqlglot = {version = "^30.8.0", extras = ["c"]}
pandas = "^3.0.3"
# dépendances Google / cloud
google-cloud-bigquery = "^3.41.0"
langgraph = "^1.2.2"
langchain-google-genai = "^4.2.3"
google-cloud-secret-manager = "^2.28.0"

snowflake-connector-python = {version = "^4.6.0", extras = ["pandas"]}
faker = "^40.19.1"

# sécurité et hashing
bcrypt = "^5.0.0"

fastapi = ">=0.136.3,<1.0.0"
pyyaml = ">=6.0.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.20.0"
ruff = "^0.15.15"
vulture = "^2.16"
pytest = "^9.0"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.4.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry.scripts]
mocksql     = "cli.main:main"
load         = "init.load_categorical_fields:main"
init_db      = "init.init_db:cli_main"
alter_table  = "init.alter_table:cli_main"
grant        = "init.grant_access_to_db:main"
create_user  = "init.create_user:main"
add_column  = "init.add_column:main"
add_table   = "init.add_table:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
