[tool.poetry]
name = "mocksql"
version = "0.1.15"
description = "SQL unit test data generator for Analytics Engineers — SQLGlot extracts constraints, LLM generates fixtures, DuckDB validates with automatic retry on empty results"
authors = ["Adel Skhiri <skhiriadel92@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/skadel/mocksql"
repository = "https://github.com/skadel/mocksql"
keywords = ["sql", "testing", "analytics", "bigquery", "duckdb", "langgraph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
packages = [
  { include = "app" },
  { include = "cli" },
  { include = "build_query" },
  { include = "models" },
  { include = "init" },
  { include = "sql_functions" },
  { include = "utils" },
  { include = "storage" },
]
include = [
  { path = "common_vars.py", format = ["sdist", "wheel"] },
  { path = "server.py", format = ["sdist", "wheel"] },
  { path = "static/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
typer = {extras = ["all"], version = "^0.26.7"}
uvicorn = "^0.49.0"
langchain = "^1.3.10"
langchain-classic = "1.0.8"
pydantic = ">=2.13.4,<3.0.0"
python-dotenv = "^1.2.2"
duckdb = "^1.5.4"
sqlglot = {version = "^30.11.0", extras = ["c"]}
pandas = "^3.0.3"
langgraph = "^1.2.6"
langchain-google-genai = "^4.2.5"
faker = "^40.23.0"

# sécurité et hashing
bcrypt = "^5.0.0"

fastapi = ">=0.138.0,<1.0.0"
pyyaml = ">=6.0.3"

# Connecteurs sources optionnels (dépendances lourdes : pyarrow, grpc…).
# Installés via les extras pour garder l'install de base légère.
# pip install mocksql[bigquery] / [snowflake] / [all]
google-cloud-bigquery = {version = "^3.42.0", optional = true}
snowflake-connector-python = {version = "^4.6.0", optional = true}

[tool.poetry.extras]
bigquery = ["google-cloud-bigquery"]
snowflake = ["snowflake-connector-python"]
all = ["google-cloud-bigquery", "snowflake-connector-python"]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.21.0"
ruff = "^0.15.18"
vulture = "^2.16"
pytest = "^9.1"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.4.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry.scripts]
mocksql     = "cli.main:main"
load         = "init.load_categorical_fields:main"
init_db      = "init.init_db:cli_main"
alter_table  = "init.alter_table:cli_main"
grant        = "init.grant_access_to_db:main"
create_user  = "init.create_user:main"
add_column  = "init.add_column:main"
add_table   = "init.add_table:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
