[tool.poetry]
name = "mocksql-ui"
version = "0.1.0"
description = "Web UI for MockSQL"
authors = ["Adel Skhiri <skhiriadel92@gmail.com>"]
packages = [{ include = "mocksql_ui" }]
include = [
    { path = "mocksql_ui/static/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mocksql = ">=0.1.0"
fastapi = ">=0.100.0"
langserve = ">=0.3.0"
sse-starlette = ">=1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
